--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
     </header>
 
     <main>
-        <div class="filme-principal">
+        <div class="filme-principal" style="background-image:url('img/lucifer.jpg');">
             <div class="container">
-                <h3 class="titulo">Lucifer</h3>
+                <h3 class="titulo">LUCIFER</h3>
                 <p class="descricao">Entediado com a vida nas trevas, o diabo se muda para Los Angeles, abre um piano-bar e empresta sua sabedoria a uma investigadora de assassinatos.</p>
-                
-
             </div>
-
+            <div>
+                <button role="button" class="botao">ASSISTIR AGORA</button>
+                <button role="button" class="botao">MAIS INFORMAÇÕES</button>
+            </div>
+        
         </div>
     </main>
 </body>
