--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
     <div class="container">
-        <h2 class="logo">NETFLIX</h2>
+        <h2 class="logo">MAISFLIX</h2>
         <nav>
             <a href="#">Inicio</a>
             <a href="#">Séries</a>
@@ -32,8 +32,19 @@
                 <button role="button" class="botao">ASSISTIR AGORA</button>
                 <button role="button" class="botao">MAIS INFORMAÇÕES</button>
             </div>
-        
         </div>
+        <p class="subtitle">Populares na MaisFlix</p>
+        <div class="series">
+            <img src="img/arrow.png" width=250px" height="200px"/>
+            <img src="img/download.png" width="250px" height="200px"/>
+            <img src="img/atypical.jpg" width="250px" height="200px"/>
+            <img src="img/images.png" width="250px" height="200px"/>
+            <img src="img/oz.jpg" width="250px" height="250px"/>
+            <img src="img/pt-BR.jpeg" width="250px" height="250px"/>
+            <img src="img/sweet.jpg" width="250px" height="250px"/>
+            <img src="img/teen.jpg" width="250px" height="250px"/>
+        </div>
+    
     </main>
 </body>
 </html>
